--- a/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
+++ b/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
@@ -41,7 +41,7 @@
           </div>
           @if (!(isMobileOrTablet$ | async)!) {
           <div class="col-auto d-inline-block">
-            <button type="button" class="btn btn-danger" (click)="initFilters()">
+            <button type="button" class="btn btn-danger" (click)="resetFilters()">
               <i class="bi bi-arrow-clockwise"></i> {{ t('reset') }}
             </button>
           </div>
@@ -76,7 +76,7 @@
           }
           @if ((crypt$ | async)?.length === 0) {
           <div class="d-flex justify-content-center mt-2">
-            <button type="button" class="btn btn-danger btn-lg" (click)="initFilters()">
+            <button type="button" class="btn btn-danger btn-lg" (click)="resetFilters()">
               {{ t('reset_filters') }}
             </button>
           </div>
