--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -99,6 +99,12 @@
                   <span>{{ 'shared.library' | transloco }}</span>
                 </a>
               </div>
+              <div class="col-6 col-md-4">
+                <a routerLink="/proxy-generator" class="hero-card bg-secondary text-white">
+                  <i class="bi bi-printer"></i>
+                  <span>{{ 'shared.proxy_generator' | transloco }}</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
